AT-92 downgrade lang level to JDK 11 in diagnostic telemetry module to use it in intellij.platform.jps.model.impl
GitOrigin-RevId: fc7232141f9cceaae0910d5d424c88e185898c0c